tests/NormalTests/paczka1/fuzzy1/39034532.err
Error in line 6: qwhJZ0oFf0 A291 .5,.
Error in line 9: p5C6 S126 29,9
Error in line 4: am26f3 S428 92,2
Error in line 7: XPf S428 83,5
Error in line 17: p5C6 A291 22,7
Error in line 24: p5C6 S428 77,3
Error in line 32: XPf S428 86,09
Error in line 30: p5C6 S126 77,8
Error in line 34: HAIS7n2p S365 33,1
